--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 * {
     padding:0;
     margin:0;
-    box-sizing:border-box;
 }
 
 /*For the fonts to be Century Gothic*/
@@ -11,43 +10,42 @@ body{
     background:rgb(240, 240, 240);
 }
 
-.wrapper{
-    display: flex;
-    position: relative;
-}
-
 /*Setting dimensions and styles of the side navigation bar*/
-.wrapper .sidebar{
+.sidebar{
     height:100%;
-    width:250px;
-    position:fixed;
+    width:275px;
+    position:relative;
     background: white;
     box-shadow: 0px 2px 10px #999;
+    float: left;
+    justify-content: center;
 }
 
 
 /*Designing the space around name*/
-.wrapper .sidebar header {
+.sidebar header {
     background-color: rgb(250, 250, 250);
     border-bottom:rgb(158, 158, 158) 1px solid;
-    padding:40px;
+    padding-top: 40px;
+    padding-top: 40px;
 }
 
-.wrapper .sidebar header h1{
+.sidebar header h1{
     font-size: 40px;
     text-align: center;
     color:rgb(216, 114, 148);
     line-height: 45px;
 }
 
-.wrapper .sidebar header h2 {
+.sidebar header h2 {
     font-size:18px;
     text-align: center;
     padding-top:15px;
+    padding-bottom: 40px;
 }
 
 /*Designing the menu of the side navigation bar*/
-.wrapper .sidebar ul {
+.sidebar ul {
     padding:30px;
     list-style: none;
     display: flex;
@@ -56,51 +54,61 @@ body{
 }
 
 /**/
-.wrapper .sidebar ul li a{
+.sidebar ul li a{
     display: block;
     width:100%;
     height: 100%;
     text-decoration: none;
     line-height: 100px;
-    color:black;
     padding-left: 25px;
+    color:black;
     border-bottom:1px solid rgb (255,255,255,0.1);
     border-top: 1px solid (255,255,255,0.1);
     transition:all .5s ease;
 }
 
 /*Animation for sliding when mouse is hovering over each section of the navigation bar*/
-.wrapper .sidebar ul li:hover a{
-    padding-left: 40px;
+.sidebar ul li:hover a{
+    padding-left: 50px;
+}
+
+/* Adjusting the space to the left and right of the icons */
+.sidebar ul li a i{
+    padding-right:20px;
 }
 
 /* Changing the colors of the icons in the side navigation bar */
-.wrapper .sidebar .home i{
+.sidebar .a i{
     color:red;
 }
 
-.wrapper .sidebar .about i{
+.sidebar .b i{
     color:orange;
 }
 
-.wrapper .sidebar .portfolio i{
+.sidebar .c i{
     color: rgb(148, 20, 148);
 }
 
-.wrapper .sidebar .book i{
+.sidebar .d i{
     color:  rgb(0, 163, 0);
 }
 
-.wrapper .sidebar .contact i{
+.sidebar .e i{
     color: rgba(226, 157, 240, 0.76);
 }
-
-/*Placing the hours and instagram link at the bottom of the navigation bar*/
-.wrapper .sidebar .other-info {
+.sidebar .other-info {
     text-align:center;
-    line-height:50px;
-    /* For the info to be aligned to the bottom
-    ... work on this
-    */
+    position:absolute;
     bottom:0;
+    margin-left: 55px;
+}
+
+.main-content .header{
+    width:100%;
+    margin-left:300px;
+}
+.main-content .info{
+    width:100%;
+    margin-left:300px;
 }
